@@ -40,6 +40,29 @@ SYNOPSIS
         # and this
         ($date <=> [2001, 7, 1])
 
+INSTALLATION
+
+     If your system has the "make" program or a clone:
+
+         perl Makefile.PL
+         make
+         make test
+         make install
+
+     If you lack "make", copy the "lib/Date" directory to your module
+     directory (run "perl -V:sitelib" to find it).
+
+     If "make test" fails, perhaps it means your system can't compile C
+     code.  Try:
+
+         make distclean
+         perl Makefile.PL noxs
+         make
+         make test
+         make install
+
+     This will use the pure-Perl implementation.
+
 DESCRIPTION
     Dates are complex enough without times and timezones. This module may be
     used to create simple date objects. It handles:
@@ -63,18 +86,18 @@ DESCRIPTION
     4-digit.
 
     Gregorian dates up to year 9999 are handled correctly, but we rely on
-    Perl's builtin `localtime' function when the current date is requested.
-    On some platforms, `localtime' may be vulnerable to rollovers such as
-    the Unix `time_t' wraparound of January 2038.
+    Perl's builtin "localtime" function when the current date is requested.
+    On some platforms, "localtime" may be vulnerable to rollovers such as
+    the Unix "time_t" wraparound of January 2038.
 
     Overloading is used so you can compare or subtract two dates using
-    standard numeric operators such as `==', and the sum of a date object
+    standard numeric operators such as "==", and the sum of a date object
     and an integer is another date object.
 
-    Date::Simple objects are immutable. After assigning `$date1' to
-    `$date2', no change to `$date1' can affect `$date2'. This means, for
-    example, that there is nothing like a `set_year' operation, and
-    `$date++' assigns a new object to `$date'.
+    Date::Simple objects are immutable. After assigning "$date1" to
+    "$date2", no change to "$date1" can affect "$date2". This means, for
+    example, that there is nothing like a "set_year" operation, and
+    "$date++" assigns a new object to "$date".
 
     This module contains various undocumented functions. They may not be
     available on all platforms and are likely to change or disappear in
@@ -83,7 +106,7 @@ DESCRIPTION
 
 CONSTRUCTORS
     Several functions take a string or numeric representation and return a
-    corresponding date object. The most general is `new', whose argument
+    corresponding date object. The most general is "new", whose argument
     list may be empty (returning the current date), a string in ISO 8601
     format (YYYY-MM-DD), a list or arrayref of year, month, and day number,
     or a date object.
@@ -92,23 +115,23 @@ CONSTRUCTORS
     date ([ARG, ...])
             my $date = Date::Simple->new('1972-01-17');
 
-        The `new' method will return a date object if the values passed in
+        The "new" method will return a date object if the values passed in
         specify a valid date. If an invalid date is passed, the method
         returns undef. If the argument is invalid in form as opposed to
-        numeric range, `new' dies.
+        numeric range, "new" dies.
 
-        The `date' function provides the same functionality but must be
-        imported or qualified as `Date::Simple::date'. (To import all public
-        functions, do `use Date::Simple (':all');'.) This function returns
+        The "date" function provides the same functionality but must be
+        imported or qualified as "Date::Simple::date". (To import all public
+        functions, do "use Date::Simple (':all');".) This function returns
         undef on all invalid input, rather than dying in some cases like
-        `new'.
+        "new".
 
     today()
-        Returns the current date according to `localtime'.
+        Returns the current date according to "localtime".
 
         Caution: To get tomorrow's date (or any fixed offset from today), do
-        not use `today + 1'. Perl parses this as `today(+1)'. You need to
-        put empty parentheses after the function: `today() + 1'.
+        not use "today + 1". Perl parses this as "today(+1)". You need to
+        put empty parentheses after the function: "today() + 1".
 
     ymd (YEAR, MONTH, DAY)
         Returns a date object with the given year, month, and day numbers.
@@ -129,7 +152,7 @@ CONSTRUCTORS
             use Date::Simple ('d8');
             $doi = d8('17760704');
 
-        Mnemonic: The string matches `/\d{8}/'. Also, "d8" spells "date", if
+        Mnemonic: The string matches "/\d{8}/". Also, "d8" spells "date", if
         8 is expanded phonetically.
 
 INSTANCE METHODS
@@ -168,8 +191,8 @@ INSTANCE METHODS
         Returns a list of three numbers: year, month, and day.
 
     DATE->as_d8
-        Returns the "d8" representation (see `d8'), like
-        `$date->format("%Y%m%d")'.
+        Returns the "d8" representation (see "d8"), like
+        "$date->format("%Y%m%d")".
 
     DATE->format (STRING)
     DATE->strftime (STRING)
@@ -189,13 +212,13 @@ INSTANCE METHODS
 OPERATORS
     Some operators can be used with Date::Simple instances. If one side of
     an expression is a date object, and the operator expects two date
-    objects, the other side is interpreted as `date(ARG)', so an array
+    objects, the other side is interpreted as "date(ARG)", so an array
     reference or ISO 8601 string will work.
 
     DATE + NUMBER
     DATE - NUMBER
         You can construct a new date offset by a number of days using the
-        `+' and `-' operators.
+        "+" and "-" operators.
 
     DATE1 - DATE2
         You can subtract two dates to find the number of days between them.
@@ -212,7 +235,7 @@ OPERATORS
     DATE -= NUMBER
         You can increment or decrement a date by a number of days using the
         += and -= operators. This actually generates a new date object and
-        is equivalent to `$date = $date + $number'.
+        is equivalent to "$date = $date + $number".
 
     "$date"
         You can interpolate a date instance directly into a string, in the
