@@ -1,3 +1,9 @@
+2001-10-02  John Tobey  <jtobey@john-edwin-tobey.org>
+
+	* lib/Date/Simple.pm ($VERSION): Version 2.02.
+
+	* Simple.xs (days_in_month): avoid crash due to reversed args.
+
 2001-08-27  John Tobey  <jtobey@john-edwin-tobey.org>
 
 	* lib/Date/Simple.pm: Version 2.01.
